release, this snapshot is *not* intended for production servers. 
Your testing and feedback is greatly appreciated.

Thanks very much to those people who spent time testing the RC1 
release and reported their findings.  We would like to especially 
thank Thomas Bork <tombork@web.de> for his numerous reports. 
We believe that RC2 is in much better shape in a large part due 
to his efforts.

Common issues addressed in 3.0.23rc2 include:

   o Winbindd & Samba PDC integration issues.
   o Join problems from Windows clients in a Samba domain.
   o Winbind & AD trust failures.


Group Mapping Changes
=====================

The default mapping entries for groups such as "Domain Admins"
are no longer created when using an smbpasswd file or a tdbsam passdb 
backend.  This means that it is necessary to use 'net groupmap add'
rathe than 'net groupmap modify' to set these entries.  This change
has no effect on winbindd's IDmap functionality for domain groups.



######################################################################
Changes
#######

Changes since 3.0.23rc1
-----------------------

commits
-------

o   Jeremy Allison <jra@samba.org>
    * Ensure we use sys_write in password chats so we're not 
      interrupted.
    * Ensure all new rid allocation goes through the same pdb_ldap 
      interface.
    * BUG 3308: Stop us returning duplicate mid replies on path 
      based set-EOF trans2 calls.
    * Pass RAW-OPLOCK with kernel oplocks off.
    * Fix bug in OS/2 Warp - it doesn't set the ff_last offset 
      correctly when doing info level 1 directory scans.
    * Add Samba4 replacement for timegm() to work on Solaris.
    * Remove extra add-byte in the trans2 UNIX_BASIC infolevel.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Only call the printer publishing calls if 'security = ads'.


o   Guenther Deschner <gd@samba.org>
    * Set our internal domains to "online" by default in winbindd.
    * BUG 3800: Fill the password_policy method in winbindd for 