@@ -5,6 +5,7 @@ INSTALLPERMS=$1
 DESTDIR=$2
 prefix=`echo $3 | sed 's/\/\//\//g'`
 BINDIR=`echo $4 | sed 's/\/\//\//g'`
+SBINDIR=@sbindir@
 shift
 shift
 shift
